name:                thief
version:             0.1.0.0
synopsis:
license:             AGPL-3
license-file:        LICENSE
author:              inkyu lee
maintainer:          gofiri@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Thief
  other-modules:       Thief.Raw.FFI
                     , Thief.Raw.Input
                     , Thief.Raw.Signal
                     , Thief.Raw.Result
                     , Thief.Raw
                     , Thief.Status
                     , Thief.Color
                     , Thief.Box
                     , Thief.Handler
                     , Thief.Handler.Ansi
                     , Thief.Handler.Cursor
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable e
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -fllvm -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , thief
  default-language:    Haskell2010

test-suite thief-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec
  main-is:             Spec.hs
  build-depends:       base
                     , thief
  ghc-options:         -fllvm -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
source-repository head
  type:     git
  location: https://github.com/inq/thief
