name:                thief
version:             0.1.0.0
synopsis:
license:             AGPL-3
license-file:        LICENSE
author:              inkyu lee
maintainer:          gofiri@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Thief
  other-modules:       Thief.Raw.FFI
                     , Thief.Raw.Input
                     , Thief.Raw.Signal
                     , Thief.Raw.Event
                     , Thief.Raw
                     , Thief.UI.Common
                     , Thief.UI.Screen
                     , Thief.UI.Window
                     , Thief.Handler
                     , Thief.Handler.Status
                     , Thief.Term.FFI
                     , Thief.Term.TChar
                     , Thief.Term.Classes
                     , Thief.Term.Buffer
                     , Thief.Term.Line
                     , Thief.Term.Cursor
                     , Thief.Term.Ansi
                     , Thief.Term.Brush
                     , Thief.Term
                     , Misc.Default
                     , Misc.Color
                     , Misc
                     , Misc.StateMachine
  build-depends:       base
                     , unix
                     , mtl
  default-language:    Haskell2010

executable e
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -fllvm -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , thief
  default-language:    Haskell2010

test-suite thief-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, spec
  main-is:             Spec.hs
  other-modules:       Thief.Raw.FFI
                     , Thief.Raw.Input
                     , Thief.Raw.Signal
                     , Thief.Raw.Event
                     , Thief.Raw
                     , Thief.Handler
                     , Thief.Handler.Status
                     , Thief.Term.FFI
                     , Thief.Term.TChar
                     , Thief.Term.Classes
                     , Thief.Term.Buffer
                     , Thief.Term.Line
                     , Thief.Term.Cursor
                     , Thief.Term.Ansi
                     , Thief.Term.Brush
                     , Thief.Term
                     , Misc.Default
                     , Misc.Color
                     , Misc
                     , Misc.StateMachine

                     , Misc.StateMachineSpec
                     , SpecHelper
                     , Thief.Term.BufferSpec
                     , Thief.Term.LineSpec
                     , Thief.Term.TCharSpec
  build-depends:       base
                     , unix
                     , mtl
                     , hspec
  ghc-options:         -fllvm -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
source-repository head
  type:     git
  location: https://github.com/inq/thief
